06.05.2026 -> Pliki, wyjątki -> More Checks